# assignment

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run
core/: manage.py
core/de/: asgi.py  settings.py  wsgi.py
core/tax_registration/: admin.py  apps.py  models.py  tasks.py
core/tax_registration/etl/: extractor.py  loader.py  tracker.py  transformer.py
core/tax_registration/management/commands/: load_tax_registration.py
core/tax_registration/migrations/: 0001_initial.py  0004_alter_businessindustry_unique_together_and_more.py  0005_etljobrun_updated_at.py
core/utils/: bulk_importer.py  csv_downloader.py
de/: manage.py
de/de/: asgi.py  settings.py  urls.py  wsgi.py
de/tax_registration/: apps.py  models.py
de/tax_registration/management/commands/: load_tax_registration.py
de/tax_registration/migrations/: 0001_initial.py  0002_alter_taxregistration_business_name_and_more.py  0003_alter_taxregistration_created_at_and_more.py
de/utils/: bulk_importer.py  csv_downloader.py
docker/: Dockerfile  start
docker/cloudwatch-agent/: config.json  credentials.example
terraform/: .env.aws  cloudwatch_alarms.tf  cloudwatch_dashboard.tf  cloudwatch_log_groups.tf  cloudwatch_metric_filters.tf  iam_policies.tf  iam_user.tf  main.tf  outputs.tf  sns.tf  tf.yml  variables.tf
