[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Furthermore <wrbyepcr11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
django = "^6.0.1"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.12.1"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
