[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Furthermore <wrbyepcr11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
django = "^6.0.1"
requests = "^2.32.5"
psycopg2-binary = "^2.9.11"
pandas = "^3.0.0"
django-environ = "^0.12.0"
python-json-logger = "^4.0.0"
django-q2 = "^1.9.0"
watchtower = "^3.4.0"
boto3 = "^1.42.35"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.12.1"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
